[breadboard-ui/-web] Fix minor issues on iOS

--- a/packages/breadboard-web/public/styles/global.css
+++ b/packages/breadboard-web/public/styles/global.css
@@ -185,8 +185,8 @@ body {
   margin: 0;
   font-family: var(--bb-font-family);
   color: var(--bb-font-color);
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   background: rgb(253, 253, 253);
